# QtPyBridge

./: CMakeLists.txt  README.md
QtClient/IPC/: DataFrame.cpp  DataFrame.h  PythonIO.cpp  PythonIO.h  Session.cpp  Session.h  TcpSocket.cpp  TcpSocket.h
QtClient/PythonProcess/: PythonInvoker.cpp  PythonInvoker.h  PythonProcess.cpp  PythonProcess.h  PythonProcessPrivate.cpp  PythonProcessPrivate.h  PythonThread.cpp  PythonThread.h
